# Face_Generation_GAN

./: .gitignore  Face_Generation.ipynb  MODEL_CARD.md  PORTFOLIO_IMPROVEMENT_PLAN.md  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/face_gan/: data.py  generate.py  losses.py  models.py  train.py  utils.py
tests/: test_losses.py  test_models.py
